--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>macaroni</title>
-        <link rel=stylesheet href='indexstyle.css'/>
+        {% block style %}
+
+        {% endblock style %}
     </head>
     <body>
         <div id="background"></div>
@@ -10,18 +11,22 @@
             <div id="nav">
                 <ul>
                     <b>> chipzymango</b>
-                    <a href='index.html'><li>Home</li></a>
-                    <a href='about.html'><li>About</li></a>
-                    <a href='index.html'><li>Contacts</li></a>
+                    <a href='/index/'><li>Home</li></a>
+                    <a href='/about/'><li>About</li></a>
+                    <a href='/index/'><li>Contacts</li></a>
+                    <div class="line"></div>
+                    <a href='/register/'><li>Register</li></a>
+                    <a href='/login/'><li>Login</li></a>
                 </ul>
             </div>
 
             <div id="content">
-                <div id="content-box">
-                    <h1>Welcome!</h1>
-                </div>
-                                        
-                <div class='push'></div>
+                {% block content %}
+
+                {% endblock content %}
+            </div>
+            
+            <div class='push'></div>
                 <!--this div class called "push"
 is here to seperate the content-
 div from the footer-div. This will
@@ -29,12 +34,11 @@ push the footer downwards if the
 content in the content-div is
 too big, though only if the
 content in content-div is too big-->
-            </div>
 
             <div id="footer">
                 <ul>
                     <li>> chipzymango</li>
-                    <li>Powered by IT.Café AS</li>
+                    <li>Powered by IT.Café</li>
                     <li>github.com/chipzymango</li>
                     <li>Oslo, Norway</li>
                 </ul>
