Added more sites and fixes for app.py
I added some more sites, worked with the authentication system (not perfect yet) and changed some things in app.py to make it more linux friendly I guess?

--- a/static/aboutstyle.css
+++ b/static/aboutstyle.css
@@ -75,8 +75,8 @@ body > #background {
     text-decoration: none;
 }
 
-.line {
-    color: red;
+.auth {
+    float: right;
 }
 
 /*this creates the space between the navigation elements*/
