--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
     <title>Welcome!</title>
     <link rel=stylesheet href="{{ url_for('static', filename='indexstyle.css') }}" />
 {% endblock style %}
+
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <h2 id="flashingmessages">{{msg}}</h2>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
+
 {% block content %}
     <div id="content-box">
         <h1>Welcome!</h1>
