--- a/templates/login.html
+++ b/templates/login.html
@@ -5,22 +5,23 @@
 {% endblock style %}
 {% block content %}
     <div id="content-box">
-            Log in with your I.T.Café account
-        {% with messages = get_flashed_messages() %}
+        <form action="" method="POST">
+            <h2>Log in with your account!</h2><br>
+            <p>Name:
+            <input type="text" name="input_name" /></p><br>
+            <p>Password:
+            <input type="password" name="input_pass" /></p><br>
+            <p><input type="submit" value='Log in' class=submit /></p>
+            </p>
+        </form>
+        
+    {% with messages = get_flashed_messages() %}
         {% if messages %}
             {% for msg in messages %}
-                <p id="loginmessages">{{msg}}</p>
+                <h2 id="loginmessages">{{msg}}</h2>
             {% endfor %}
         {% endif %}
     {% endwith %}
-        <form action="" method="POST">
-            <p>Name:
-            <input type="text" name="input_name" /></p>
-            <p>Password:
-            <input type="password" name="input_pass" /></p>
-            <p><input type="submit" value=submit class=submit /></p>
-            </p>
-        </form>
 
     </div>
 {% endblock content %}                           
