--- a/templates/register.html
+++ b/templates/register.html
@@ -6,13 +6,21 @@
 {% block content %}
     <div id="content-box">
         <form action="" method="POST">
+            <h2>Register your account now!</h2><br>
             <p>Name:
-            <input type="text" name="new_name" /></p>
+            <input type="text" name="new_name" /></p><br>
             <p>Password:
-            <input type="password" name="new_pass" /></p>
+            <input type="password" name="new_pass" /></p><br>
             <p>Email:
-            <input type="email" name="new_email" /> </p>
-            <p><input type="submit" value=submit class=submit /></p>
+            <input type="email" name="new_email" /> </p><br>
+            <p><input type="submit" value='Register' class=submit /></p>
        </form>
     </div>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <h2 id="registermessages">{{msg}}</h2>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 {% endblock content %}                           
