Better authentication and new delete page
Authentication system now stores hashed password instead of actual password written by people. Will make it more secure overall, but there are still way better methods. Also added a delete page where one can delete user(s).

--- a/static/aboutstyle.css
+++ b/static/aboutstyle.css
@@ -95,11 +95,10 @@ body > #background {
 #about-box {
     width: 95%;
     margin: 5%;
-    text-align: center;
 }
 
 #content-box h1 {
-    font-family: 'Satisfy', cursive;
+    font-family: 'Poppins', cursive;
 }
 
 .push {
@@ -158,6 +157,10 @@ body > #background {
 #about-box img:last-child {
     transform: scaleX(-1); /*flips image*/
     padding-right: 400px;
+}
+
+#flashingmessages {
+    background-color: rgb(181, 159, 240);
 }
 
 @keyframes changing_colors { /*create animation that changes color over time*/
