--- a/templates/viewtables.html
+++ b/templates/viewtables.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block style %}
-<title>About</title>
+<title>Tables</title>
 <link rel=stylesheet href="{{ url_for('static', filename='aboutstyle.css') }}"/>
 {% endblock style %}
 {% block content %}
