--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,16 @@
     <div id="content-box">
         <div id="about-box">
             <h1>About</h1>
-            <p>About...</p>
         </div>
     </div>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for msg in messages %}
+            <h2 id="flashingmessages">{{msg}}</h2>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+
+
 {% endblock content %}                           
