--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} <!--extends 'base.html' vil importere hele koden som ligger i base.html filen-->
 {% block style %}
     <title>Welcome!</title>
     <link rel=stylesheet href="{{ url_for('static', filename='indexstyle.css') }}" />
 {% endblock style %}
 
-{% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for msg in messages %}
-                <h2 id="flashingmessages">{{msg}}</h2>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-
-
 {% block content %}
     <div id="content-box">
         <h1>Welcome!</h1>
     </div>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for msg in messages %}
+            <h2 id="flashingmessages">{{msg}}</h2>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
+
 {% endblock content %}
